CHANGELOG:
v1.13 Fixes & Features
   - rewrote read.paj() parser for Pajek formatted files, now supports timing and edge attributes, fixes error for empty network
   - added Suggests dependency for testthat for testing
v1.12 Fixes & Features
   - fix error with as.matrix.network.edgelist when as.sna.edgelist=TRUE and network has 0 edges
   - updated citation generation code
   - NAMESPACE file updated to explicitly register S3 methods (and some pseduo S3 methods as requested by CRAN check)
   - changing the vertex.sides argument to plot.network now produces polygons of equal area instead of equal radius.
   - plot.network can now plot labels on curved edges
   - refactored plot.network so that much of the argument expansion is handled by a public method plotArgs.network so that it can be accessed by depending packages
v1.11 Fixes & Features
   - minor change to layout.c to fix UBSAN warning flagged by CRAN
   - minor changes to print.network to give more informative info about some network attributes
   - get.edge.attribute now has C-level backend
   - get.edge.attribute and get.edge.value now have arguments to avoid returning attribute values from 'missing' edges (na.omit) and unset/deleted edges (deleted.edges.omit) and edges with no value assigned for the attribute (null.na). 
   - network now includes an explicit list of exported functions in NAMESPACE
   - the following 'internal' functions have been removed from NAMESPACE: networkOperatorSetup, switchArcDirection, readAndVectorizeLine, read.paj.simplify
   - network now follows R conventions for exporting some of its C-level API functions for use by other packages
   - get.inducedSubgraph() now has an optional 'eid' argument for inducing a network including specified edges and their incident vertices
   - fixed bug in as.network.matrix that caused it to ignore the na.rm argument.
   - added patch to which.matrix. type to handle NAs submitted by Philip Leifeld
   - fixed na.rm argument to as.network.matrix